--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-tagcloud": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
