--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -7,15 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "activity-calendar-widget": "^0.0.18",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.9",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
+    "react-grid-heatmap": "^1.3.0",
     "react-scripts": "5.0.1",
     "react-tagcloud": "^2.3.3",
     "web-vitals": "^2.1.4"
